# NeuroDocOps

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: api.md  mvp-architecture.md  product-research.md
neurodocops/: __init__.py  api.py  models.py  service.py
tests/: test_api.py  test_workflow_service.py
